# SWOT-LLM

./: .env.example  .gitignore  README.md  actium_defence_training_platform_step_by_step_implementation_guide.md  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  wqta-project.md
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/src/: app.ts  server.ts
server/src/config/: environment.ts
server/src/controllers/: chatController.ts  draftsController.ts
server/src/lib/: chatModel.ts  embeddings.ts  mongoClient.ts  vectorStore.ts
server/src/models/: conversation.ts  template.ts
server/src/prompts/: chatPrompts.ts
server/src/routes/: chat.ts  drafts.ts  health.ts  index.ts
server/src/scripts/: ingest.ts
server/src/services/: chatService.ts  draftService.ts
src/swot_llm/: __init__.py  cli.py  generator.py  knowledge_base.py  recommendation.py  retriever.py  telemetry.py
swot-chatbot-phase1/: .env.example  .eslintrc.cjs  .gitignore  LICENSE  README.md  docker-compose.yml  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
swot-chatbot-phase1/prisma/: schema.prisma  seed.ts
swot-chatbot-phase1/scripts/: eval_sample.ts  eval_samples.yaml  ingest.ts
swot-chatbot-phase1/src/app/: globals.css  layout.tsx  page.tsx
swot-chatbot-phase1/src/lib/: db.ts  embeddings.ts  models.ts  utils.ts
swot-chatbot-phase1/tests/: chunk.test.ts  retrieve.test.ts
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
(+41 files in other folders)
