[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swot-llm"
version = "0.1.0"
description = "Water Quality Technical Assistant Chatbot reference implementation"
authors = [{name = "SWOT"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0"
]

[project.scripts]
swot-llm = "swot_llm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
